Add --no-cmdline option to omit adding a cmdline to UKIs
This allows passing kernel command line options via the command line
when Secure Boot is active. Without this, systemd-stub dismisses any
attempts to override the kernel command line.

It can be useful when using systemd-cryptenroll with TPM PCR 12.

Implements #181

--- a/man/mkinitcpio.8.adoc
+++ b/man/mkinitcpio.8.adoc
@@ -129,6 +129,12 @@ other features.
     try one of the files _/etc/kernel/cmdline_, _/usr/share/kernel/cmdline_
     or _/proc/cmdline_.
 
+*--no-cmdline*::
+    Omit embedding a kernel command line string in the unified kernel image.
+    Kernel command line options will need to be passed via the kernel command
+    line.
+    Overrides the *--cmdline* option.
+
 *--splash* _filename_::
     UEFI executables can show a bitmap file on boot.
 
