--- a/AUTHORS
+++ b/AUTHORS
@@ -36,6 +36,7 @@ Ionut Biru <ionut@archlinux.ro>
 Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 Jonas Große Sundrup <jonas-git@grosse-sundrup.com>
 Josephine Pfeiffer <gitlab@josie.lol>
+Levente Polyak <anthraxx@archlinux.org>
 Loui Chang <louipc.ist@gmail.com>
 Luca Stefani <luca.stefani.ge1@gmail.com>
 Markus Weippert <markus@gekmihesg.de>
@@ -55,6 +56,7 @@ Spencer Skylar Chan
 Sébastien Luttringer <seblu@seblu.net>
 Tcc
 Thomas Bächler <thomas@archlinux.org>
+Thomas Weißschuh <thomas@t-8ch.de>
 Tobias Powalowski <tpowa@archlinux.org>
 Tom Gundersen <teg@jklm.no>
 Tuomas Lähdekorpi <tuomas.lahdekorpi@gmail.com>
