--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Aaron Griffin <aaronmgriffin@gmail.com>
 Adam Maroti <jmarotiadam@gmail.com>
 Alexander Schnaidt <alex.schnaidt@gmail.com>
 Alexei Colin <ac@alexeicolin.com>
+Andrew J. Hesford <ajh@sideband.org>
 Arkadij Chistyj <arkdchst@gmail.com>
 Balló György <ballogyor+arch@gmail.com>
 Benjamin Richter <br@waldteufel-online.net>
@@ -12,6 +13,7 @@ Chih-Hsuan Yen <yan12125@gmail.com>
 Chocobo1
 Christian Hesse <mail@eworm.de>
 Christian Heusel <christian@heusel.eu>
+Damon Harris <thedcoder@protonmail.com>
 Dan McGee <dan@archlinux.org>
 Daniel Edgecumbe <git@esotericnonsense.com>
 Daniel Wallace <danielwallace@gtmanfred.com>
@@ -19,14 +21,17 @@ Danilo <van.dor.danilo+github@gmail.com>
 Dave Reisner <d@falconindy.com>
 Davide Depau <davide@depau.eu>
 Dāvis <davispuh@gmail.com>
+Emil Velikov <emil.l.velikov@gmail.com>
 Eric Bélanger <snowmaniscool@gmail.com>
 Erik Stromdahl <erik.stromdahl@gmail.com>
+Evan James <dalto@fastmail.com>
 Evangelos Foutras <evangelos@foutrelis.com>
 Felix Yan <felixonmars@archlinux.org>
 Florian Eitel <feitel@indeedgeek.de>
 Florian Münchbach
 Florian Pritz <bluewind@xinu.at>
 Geert Hendrickx <geert@hendrickx.be>
+Gene C <arch@sapience.com>
 Gerardo Exequiel Pozzi <vmlinuz386@yahoo.com.ar>
 Gerhard Brauer <gerhard.brauer@web.de>
 Giancarlo Razzolini <grazzolini@archlinux.org>
@@ -34,13 +39,16 @@ Hector Martin <marcan@marcan.st>
 Hugo Osvaldo Barrera <hugo@whynothugo.nl>
 Ionut Biru <ionut@archlinux.ro>
 Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+Joel McBride <joelsgp@protonmail.com>
 Jonas Große Sundrup <jonas-git@grosse-sundrup.com>
 Josephine Pfeiffer <gitlab@josie.lol>
+Leo Pham <wsrgs@proton.me>
 Levente Polyak <anthraxx@archlinux.org>
 Loui Chang <louipc.ist@gmail.com>
 Luca Stefani <luca.stefani.ge1@gmail.com>
 Markus Weippert <markus@gekmihesg.de>
 Matthew Monaco <matthew.monaco@0x01b.net>
+Maxim Mikityanskiy <maxtram95@gmail.com>
 Michael Kopp <kopp.michael@yahoo.de>
 Morten Linderud <morten@linderud.pw>
 Piotr Gorski <lucjan.lucjanov@gmail.com>
@@ -60,9 +68,12 @@ Thomas Weißschuh <thomas@t-8ch.de>
 Tobias Powalowski <tpowa@archlinux.org>
 Tom Gundersen <teg@jklm.no>
 Tuomas Lähdekorpi <tuomas.lahdekorpi@gmail.com>
+Vladimir Kochnev <hashtable@yandex.ru>
 WorMzy Tykashi <wormzy.tykashi@gmail.com>
+Xiaotian Wu <yetist@gmail.com>
 Yishen Miao <mys721tx@gmail.com>
 cedric cvl <cvlc12@outlook.fr>
+classabbyamp <dev@placeviolette.net>
 dNhax <dasNeutrum@googlemail.com>
 ff0x <ff0x@this-is-fine.io>
 nl6720 <nl6720@gmail.com>
