--- a/man/lsinitcpio.1.adoc
+++ b/man/lsinitcpio.1.adoc
@@ -52,6 +52,13 @@ simply lists the contents of an image.
     the contents of an image, and show files as they are extracted when
     the *-x* option is given.
 
+*--cpio*::
+    List or extract only the main CPIO image.
+
+*--early*::
+    List or extract only the early CPIO image if it exists. See *mkinitcpio(8)*
+    for more information about early CPIO images.
+
 == Bugs
 
 Upon writing this man page, there were no noticeable bugs present. Please visit
