--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Alexei Colin <ac@alexeicolin.com>
 Andrew J. Hesford <ajh@sideband.org>
 Arkadij Chistyj <arkdchst@gmail.com>
 Balló György <ballogyor+arch@gmail.com>
+Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 Benjamin Richter <br@waldteufel-online.net>
 Brian Parsons <brian@pmex.com>
 Chih-Hsuan Yen <yan12125@gmail.com>
@@ -46,11 +47,14 @@ Leo Pham <wsrgs@proton.me>
 Levente Polyak <anthraxx@archlinux.org>
 Loui Chang <louipc.ist@gmail.com>
 Luca Stefani <luca.stefani.ge1@gmail.com>
+Luke T. Shumaker <lukeshu@umorpha.io>
 Markus Weippert <markus@gekmihesg.de>
 Matthew Monaco <matthew.monaco@0x01b.net>
 Maxim Mikityanskiy <maxtram95@gmail.com>
 Michael Kopp <kopp.michael@yahoo.de>
+Mike Yuan <me@yhndnzj.com>
 Morten Linderud <morten@linderud.pw>
+Philip H. <pheiduck@icloud.com>
 Piotr Gorski <lucjan.lucjanov@gmail.com>
 Qu Wenruo <wqu@suse.com>
 Richard Kraus <richardkraus98@pm.me>
