mkinitcpio: use MODULES_DECOMPRESS to also control firmware file decompression
Implement firmware file decompression and symlink re-linking.

--- a/man/mkinitcpio.conf.5.adoc
+++ b/man/mkinitcpio.conf.5.adoc
@@ -71,10 +71,10 @@ override the main configuration file.
     and may cause invalid images to be generated without any sign of an error.
 
 *MODULES_DECOMPRESS*::
-    Switch (_yes_/_no_) to decide whether kernel modules should be compressed or
-    uncompressed during initramfs creation. Enabled by default for faster bootup
-    and smaller initramfs size. Disable it to reduce RAM usage in early
-    userspace.
+    Switch (_yes_/_no_) to decide whether kernel modules and their firmware
+    should be compressed or uncompressed during initramfs creation. Enabled by
+    default for faster bootup and smaller initramfs size. Disable it to reduce
+    RAM usage in early userspace.
 
 == See also
 
