--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Christian Hesse <mail@eworm.de>
 Christian Heusel <christian@heusel.eu>
 Damon Harris <thedcoder@protonmail.com>
 Dan McGee <dan@archlinux.org>
+Dang Huynh <danct12@disroot.org>
 Daniel Edgecumbe <git@esotericnonsense.com>
 Daniel Wallace <danielwallace@gtmanfred.com>
 Danilo <van.dor.danilo+github@gmail.com>
@@ -36,6 +37,7 @@ Gene C <arch@sapience.com>
 Gerardo Exequiel Pozzi <vmlinuz386@yahoo.com.ar>
 Gerhard Brauer <gerhard.brauer@web.de>
 Giancarlo Razzolini <grazzolini@archlinux.org>
+Guilherme Silva <oguilherme@proton.me>
 Hector Martin <marcan@marcan.st>
 Hugo Osvaldo Barrera <hugo@whynothugo.nl>
 Ionut Biru <ionut@archlinux.ro>
