Move AsciiDoc attribute "manmanual" from the Makefile to the adoc files
It is simpler to just specify the static attribute in the documents
themselves.

--- a/man/mkinitcpio.8.adoc
+++ b/man/mkinitcpio.8.adoc
@@ -3,6 +3,7 @@ vim:set ts=4 sw=4 syntax=asciidoc noet:
 SPDX-License-Identifier: GPL-2.0-only
 ////
 :doctype: manpage
+:manmanual: mkinitcpio manual
 
 = mkinitcpio(8)
 
