--- a/man/mkinitcpio.conf.5.adoc
+++ b/man/mkinitcpio.conf.5.adoc
@@ -71,10 +71,16 @@ override the main configuration file.
     and may cause invalid images to be generated without any sign of an error.
 
 *MODULES_DECOMPRESS*::
-    Switch (_yes_/_no_) to decide whether kernel modules and their firmware
-    should be compressed or uncompressed during initramfs creation. Enabled by
-    default for faster bootup and smaller initramfs size. Disable it to reduce
-    RAM usage in early userspace.
+    Switch (_yes_/_no_) to decide whether loadable kernel modules and their
+    firmware should remain compressed or be uncompressed during initramfs
+    creation. Disabled by default to avoid recompressing the files using a lower
+    compression and to reduce RAM usage during early boot. Enable to allow
+    further decreasing image size when using high compression (e.g.
+    *xz -9e* or *zstd --long --ultra -22*) at the expense of increased RAM usage
+    at early boot.
+     +
+    Note that any compressed files will be placed in the uncompressed early CPIO
+    to avoid double compression.
 
 == See also
 
