--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Balló György <ballogyor+arch@gmail.com>
 Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 Benjamin Richter <br@waldteufel-online.net>
 Brian Parsons <brian@pmex.com>
+Bill Auger <bill-auger@parabola.nu>
 Chih-Hsuan Yen <yan12125@gmail.com>
 Chocobo1
 Christian Hesse <mail@eworm.de>
@@ -26,6 +27,7 @@ Dāvis <davispuh@gmail.com>
 Emil Velikov <emil.l.velikov@gmail.com>
 Eric Bélanger <snowmaniscool@gmail.com>
 Erik Stromdahl <erik.stromdahl@gmail.com>
+Eva Kurchatova
 Evan James <dalto@fastmail.com>
 Evangelos Foutras <evangelos@foutrelis.com>
 Felix Yan <felixonmars@archlinux.org>
@@ -56,11 +58,13 @@ Maxim Mikityanskiy <maxtram95@gmail.com>
 Michael Kopp <kopp.michael@yahoo.de>
 Mike Yuan <me@yhndnzj.com>
 Morten Linderud <morten@linderud.pw>
+Onur Ankut <onurmercury@proton.me>
 Philip H. <pheiduck@icloud.com>
 Piotr Gorski <lucjan.lucjanov@gmail.com>
 Qu Wenruo <wqu@suse.com>
 Richard Kraus <richardkraus98@pm.me>
 Robin Ebert <ebertrobin2002@gmail.com>
+Ron Brown <ron.brown.5587@gmail.com>
 Sebastian Wiesner <sebastian@swsnr.de>
 Sebastien Luttringer <seblu@seblu.net>
 Simon Boulay <simon.boulay@gmail.com>
@@ -84,5 +88,6 @@ dNhax <dasNeutrum@googlemail.com>
 ff0x <ff0x@this-is-fine.io>
 nl6720 <nl6720@gmail.com>
 rogueai
+solsTiCe d'Hiver <solstice.dhiver@gmail.com>
 Štěpán Němec <stepnem@gmail.com>
 Страхиња Радић <contact@strahinja.org>
